// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Citas class should add new Cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-2-2020",
      "hora": "10:12",
      "id": "2",
      "mascota": "Hok",
      "propietario": "Kevin",
      "sintomas": "Saludable",
      "telefono": "87892400",
    },
  ],
}
`;

exports[`Test Citas class should delete Cita 1`] = `
Citas {
  "citas": Array [],
}
`;

exports[`Test Citas class should update cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-2-2020",
      "hora": "10:12",
      "id": "2",
      "mascota": "Hook",
      "propietario": "Kevin",
      "sintomas": "Saludable",
      "telefono": "87892400",
    },
  ],
}
`;
